preferens
