# docs/swagger.yaml
@@ -9,6 +9,25 @@ definitions:
       token:
         type: string
     type: object
+  dto.CreatePreferenceDTO:
+    properties:
+      place:
+        description: Название места
+        type: string
+      priority:
+        description: Приоритет должен быть неотрицательным
+        minimum: 0
+        type: integer
+    required:
+    - place
+    type: object
+  dto.InputQuestionDTO:
+    properties:
+      question:
+        type: string
+    required:
+    - question
+    type: object
   dto.LoginDTO:
     properties:
       email:
@@ -18,13 +37,6 @@ definitions:
     required:
     - email
     - password
-    type: object
-  dto.InputQuestionDTO:
-    properties:
-      question:
-        type: string
-    required:
-    - question
     type: object
   dto.RegisterUserDTO:
     properties:
@@ -38,6 +50,27 @@ definitions:
     - email
     - password
     - username
+    type: object
+  dto.UpdatePreferenceDTO:
+    properties:
+      priority:
+        description: Новый приоритет предпочтения
+        minimum: 0
+        type: integer
+    type: object
+  models.Preference:
+    properties:
+      id:
+        type: integer
+      place:
+        description: Название места
+        type: string
+      priority:
+        description: Приоритет
+        type: integer
+      user_id:
+        description: Внешний ключ для связи с User
+        type: integer
     type: object
   models.Question:
     properties:
@@ -81,6 +114,8 @@ paths:
           description: Invalid input" // Указание структуры ошибки
           schema:
             $ref: '#/definitions/controllers.ErrorResponse'
+      security:
+      - BearerAuth: []
       summary: Задать вопрос ЛЛМ
       tags:
       - LLM
@@ -132,6 +167,119 @@ paths:
       summary: Login user and return JWT token
       tags:
       - auth
+  /preferences:
+    get:
+      description: Возвращает список предпочтений пользователя
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Preference'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Получить предпочтения
+      tags:
+      - preferences
+    post:
+      consumes:
+      - application/json
+      description: Добавляет новое предпочтение для пользователя
+      parameters:
+      - description: Данные предпочтения
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreatePreferenceDTO'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Preference'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Добавить предпочтение
+      tags:
+      - preferences
+  /preferences/{id}:
+    delete:
+      description: Удаляет предпочтение пользователя по ID
+      parameters:
+      - description: ID предпочтения
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Удалить предпочтение
+      tags:
+      - preferences
+    put:
+      consumes:
+      - application/json
+      description: Изменяет приоритет предпочтения пользователя
+      parameters:
+      - description: ID предпочтения
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Новый приоритет
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UpdatePreferenceDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Preference'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Обновить предпочтение
+      tags:
+      - preferences
   /register:
     post:
       consumes:
